# declarative-io-hdfs-osdi26

./: README.md
hdfs-baseline/hadoop-common-project/hadoop-common/: HadoopJNI.cmake
hdfs-baseline/hadoop-hdfs-project/hadoop-hdfs/src/main/resources/: hdfs-default.xml
hdfs-declarative/: pom.xml
hdfs-declarative/hadoop-hdfs-project/hadoop-hdfs-client/src/main/proto/: ClientNamenodeProtocol.proto
hdfs-declarative/hadoop-hdfs-project/hadoop-hdfs-native-client/src/main/native/libhdfspp/examples/cc/: CMakeLists.txt
hdfs-declarative/hadoop-hdfs-project/hadoop-hdfs-native-client/src/main/native/libhdfspp/examples/cc/declarative-io/: CMakeLists.txt  declare-segments-async.cc  declare-segments.cc  declare-transcode-grouped.cc  declare-transcode.cc  declare.cc
hdfs-declarative/hadoop-hdfs-project/hadoop-hdfs-native-client/src/main/native/libhdfspp/include/hdfspp/: hdfspp.h  segment.h  uri.h
hdfs-declarative/hadoop-hdfs-project/hadoop-hdfs/src/main/proto/: DatanodeProtocol.proto  NamenodeProtocol.proto
hdfs-declarative/hadoop-hdfs-project/hadoop-hdfs/src/main/resources/: hdfs-default.xml
hdfs-declarative/hadoop-project/: pom.xml
scripts/: README.md  declarative_transcoding.sh  env.sh  experiment.sh  hdfs_build_cmd.sh  imperative_transcoding.sh  record_iostat.sh  record_top.sh  setup.sh  simple_transcode.sh  start_balancer.sh  start_datanode.sh  start_namenode.sh  stop_balancer.sh  stop_datanode.sh  stop_namenode.sh
scripts/configs/: SimpleWrite.xml  hdfs-site-baseline.xml  hdfs-site-declarative.xml
(+57 files in other folders)
